Fix : slider. Hidden bunton on mobile devices

--- a/src/blocks/slider/_slider.scss
+++ b/src/blocks/slider/_slider.scss
@@ -84,21 +84,25 @@
     }
 
     &__btn {
+        z-index: 1;
+        
         position: absolute;
         top: 40%;
-
+        
         display: inline-flex;
         justify-content: center;
         align-items: center;
 
-        border-radius: 50%;
         width: 70px;
         height: 70px;
-        transition: all 0.3s ease;
         border: 1px solid var(--color-main-light);
+        border-radius: 50%;
         background-color: transparent;
+        transition: all 0.3s ease;
 
-        z-index: 1;
+        @include tablet{
+            display: none;
+        }
 
         &-left {
             left: 3%;
